removing jvm args to see if this fixes it.